Fix bug of device wrap

--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -1035,7 +1035,7 @@ hr{
     height: 90px;
 }
 .mir-top {
-    margin-top: 10px;
+    margin-top: 5px;
 }
 .mir-bottom {
 
